tests/paczka2/big_fuzzy/52440696.err
Error in line 5: M3kW9mFqZ A487 41,0
Error in line 12: 8wNIeX13 A203 13,9
Error in line 4: A406 A406 87,4
Error in line 34: A406 A203 -1,7
Error in line 27: A406 A203 5,7
Error in line 43: M3kW9mFqZ A86 174,2
Error in line 44: M3kW9mFqZ A203 17,5
Error in line 54: 5QS A86 -2,6
Error in line 53: 5QS A86 46,2
Error in line 45: M3kW9mFqZ A86 70,0
Error in line 31: 8wNIeX13 A406 44,4
Error in line 64: A406 A86 5,0
Error in line 71: A406 A86 54,D
Error in line 82: a4ljHoSRiH A406 29,24
Error in line 87: A406 A86 87,5
Error in line 101: 5QS A406 24,3
Error in line 83: a4ljHoSRiH A406 34,7
Error in line 110: mDvJya A487 26,7
Error in line 115: M3kW9mFqZ A203 23,7
Error in line 132: A406 A203 39,3
Error in line 121: M3kW9mFqZ A203 77,1
Error in line 141: mDvJya A406 16,0
Error in line 142: mDvJya A86 43,6
Error in line 157: mDvJya A406 64,9
Error in line 172: 5QS A86 67,6
Error in line 165: mDvJya A86 0,8
Error in line 180: W47 A203 18,03
Error in line 175: mDvJya A406 33,8
Error in line 188: A406 A86 15,2
Error in line 189: mDvJya A487 28,4
Error in line 169: W47 A203 79,6
Error in line 195: W47 A406 42,2
Error in line 202: mDvJya A487 41,1
Error in line 205: M3kW9mFqZ A487 44,8
Error in line 209: a4ljHoSRiH A487 21,3
Error in line 219: a4ljHoSRiH A86 -5,2
Error in line 229: W47 A487 353,9
Error in line 224: mDvJya A86 7,9
Error in line 223: M3kW9mFqZ A487 21,5
Error in line 232: W47 A406 65,7
Error in line 237: W47 A487 41,7
